--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="row">
 
         <div class="video-container">
-            <video src="image/videolog.mp4" loop autoplay muted></video>
+            <video src="videolog.mp4" loop autoplay muted></video>
             <h3>Logo Designer</h3>
         </div>
 
